# Mouse-Mover

./: README.md  move-mouse.py  setup.cfg
src/mousemover/: __main__.py  constants.py  main.py  routines.py
