[metadata]
name = mousemover
version = 0.1.0
description = Move your mouse and keep that Teams icon green!
project_urls =
    Documentation = https://github.com/rrickgauer/move-mouse
    Source Code = https://github.com/rrickgauer/move-mouse
    Issue Tracker = https://github.com/rrickgauer/move-mouse/issues
author = Ryan Rickgauer
author_email = rrickgauer1@gmail.com

[options]
packages=find:
package_dir = = src
install_requires =
    pyautogui

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    mousemover = mouseover.main:main