[metadata]
name = Auto-Mouse-Mover
version = 0.1.0
description = Move your mouse and keep that Teams icon green!
project_urls =
    Documentation = https://github.com/rrickgauer/Mouse-Mover
    Source Code = https://github.com/rrickgauer/Mouse-Mover
    Issue Tracker = https://github.com/rrickgauer/Mouse-Mover/issues
author = Ryan Rickgauer
author_email = rrickgauer1@gmail.com

[options]
packages=find:
package_dir = = src
install_requires =
    pyautogui

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    mousemover = mousemover.main:run